--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
   </head>
   <body class="page">
     <header class="page-header">
-        <nav class="container main-nav">
-          <a href="" class="logo link">Web<span>Studio</span></a>
-          <ul class="site-nav list">
-            <li><a class="link current" href="">Студия</a></li>
-            <li><a class="link" href="./portfolio.html" >Портфолио</a></li>
-            <li><a class="link" href="" >Контакты</a></li>
-          </ul>
-          <div class="address-page">
-            <address>
-              <a href="mailto:" class="addres link">info@devstudio.com</a>
-            </address>
-            <address>
-              <a href="tel:" class="addres link">+380961111111</a>
-            </address>
-        </nav>
-      </div>
+      <nav class="container main-nav">
+        <a href="" class="logo link">Web<span>Studio</span></a>
+        <ul class="site-nav list">
+          <li><a class="link current" href="">Студия</a></li>
+          <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link" href="">Контакты</a></li>
+        </ul>
+        <div class="address-page">
+          <address>
+            <a href="mailto:" class="addres link">info@devstudio.com</a>
+          </address>
+          <address>
+            <a href="tel:" class="addres link">+380961111111</a>
+          </address>
+        </div>
+      </nav>
     </header>
     <main>
       <div class="generel center">
@@ -48,111 +48,113 @@
           Эффективные решения<br />
           для вашего бизнеса
         </h1>
-         <button class="button primery">Заказать услугу</button>
+        <button class="button primery">Заказать услугу</button>
       </div>
       <section class="section description">
         <div class="container">
-        <ul class="description-list list">
-          <li class="description-item">
-            <h3 class="titel description-titel">Внимание к деталям</h3>
-            <p class="text description-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="description-item">
-            <h3 class="titel description-titel">Пунктуальность</h3>
-            <p class="text description-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="description-item">
-            <h3 class="titel description-titel">Планирование</h3>
-            <p class="text description-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="description-item">
-            <h3 class="titel description-titel">Современные технологии</h3>
-            <p class="text description-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+          <ul class="description-list list">
+            <li class="description-item">
+              <h3 class="titel description-titel">Внимание к деталям</h3>
+              <p class="text description-text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="description-item">
+              <h3 class="titel description-titel">Пунктуальность</h3>
+              <p class="text description-text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="description-item">
+              <h3 class="titel description-titel">Планирование</h3>
+              <p class="text description-text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="description-item">
+              <h3 class="titel description-titel">Современные технологии</h3>
+              <p class="text description-text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="section work center">
-            <div class="container">
-        <h2 class="titel work-titel">Чем мы занимаемся</h2>
-        <ul class="work-list list">
-          <li class="work-item">
-            <img src="./images/about1.png" alt="" width="370" />
-          </li>
+        <div class="container">
+          <h2 class="titel work-titel">Чем мы занимаемся</h2>
+          <ul class="work-list list">
+            <li class="work-item">
+              <img src="./images/about1.png" alt="" width="370" />
+            </li>
 
-          <li class="work-item">
-            <img src="./images/about2.png" alt="" width="370" />
-          </li>
-          <li class="work-item">
-            <img src="./images/about3.png" alt="" width="370" />
-          </li>
-        </ul>
+            <li class="work-item">
+              <img src="./images/about2.png" alt="" width="370" />
+            </li>
+            <li class="work-item">
+              <img src="./images/about3.png" alt="" width="370" />
+            </li>
+          </ul>
         </div>
       </section>
       <section class="section team center">
         <div class="container container-team">
-        <h2 class="titel team-titel">Наша команда</h2>
-        <ul class="team-our list">
-          <li class="team-list">
-            <a href="" class="link">
-              <img src="./images/team1.jpg" alt="" width="270" />
-              <div class="description-team">
-              <p class="team-name text">Игорь Демьяненко</p>
-              <p class="team-position text">Product Designer</p>
-              </div>
-            </a>
-          </li>
-          <li class="team-list">
-            <a href="" class="link">
-              <img src="./images/team2.jpg" alt="" width="270" />
-              <div class="description-team">
-              <p class="team-name text">Ольга Репина</p>
-              <p class="team-position text">Frontend Developer</p>
-              </div>
-            </a>
-          </li>
-          <li class="team-list">
-            <a href="" class="link">
-              <img src="./images/team3.jpg" alt="" width="270" />
-              <div class="description-team">
-              <p class="team-name text">Николай Тарасов</p>
-              <p class="team-position text">Marketing</p>
-              </div>
-            </a>
-          </li>
-          <li class="team-list">
-            <a href="" class="link">
-              <img src="./images/team4.jpg" alt="" width="270" />
-              <div class="description-team">
-              <p class="team-name text">Михаил Ермаков</p>
-              <p class="team-position text">UI Designer</p>
-              </div>
-            </a>
-          </li>
-        </ul>
+          <h2 class="titel team-titel">Наша команда</h2>
+          <ul class="team-our list">
+            <li class="team-list">
+              <a href="" class="link">
+                <img src="./images/team1.jpg" alt="" width="270" />
+                <div class="description-team">
+                  <p class="team-name text">Игорь Демьяненко</p>
+                  <p class="team-position text">Product Designer</p>
+                </div>
+              </a>
+            </li>
+            <li class="team-list">
+              <a href="" class="link">
+                <img src="./images/team2.jpg" alt="" width="270" />
+                <div class="description-team">
+                  <p class="team-name text">Ольга Репина</p>
+                  <p class="team-position text">Frontend Developer</p>
+                </div>
+              </a>
+            </li>
+            <li class="team-list">
+              <a href="" class="link">
+                <img src="./images/team3.jpg" alt="" width="270" />
+                <div class="description-team">
+                  <p class="team-name text">Николай Тарасов</p>
+                  <p class="team-position text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="team-list">
+              <a href="" class="link">
+                <img src="./images/team4.jpg" alt="" width="270" />
+                <div class="description-team">
+                  <p class="team-name text">Михаил Ермаков</p>
+                  <p class="team-position text">UI Designer</p>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
-    <footer class="page-footer" >
-      <div class="footer-section container" >
-      <a href="" class="logo link"> Web<span>Studio</span></a>
-      <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-      <address class="addres">
-        <a href="mailto:" class="addres link">info@example.com</a>
-      </address>
-      <address class="addres"><a href="tel:" class="addres link">+380991111111</a></address>
+    <footer class="page-footer">
+      <div class="footer-section container">
+        <a href="" class="logo link"> Web<span>Studio</span></a>
+        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+        <address class="addres">
+          <a href="mailto:" class="addres link">info@example.com</a>
+        </address>
+        <address class="addres">
+          <a href="tel:" class="addres link">+380991111111</a>
+        </address>
       </div>
     </footer>
   </body>
